added 'rate book' REST endpoint + swagger doc
